# CI285Calc

./: CI285Calc.cabal  README.md  client_session_key.aes
.stack-work/install/789b972d/pkgdb/: CI285Calc-0.1.0.0-aaa4157a735c680a22290b8440543dd9.conf  package.cache
app/: Main.hs
