name:                CI285Calc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Tarabadi/CI285Calc#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Tarabadi
maintainer:          M.Tarabadi1@uni.brighton.ac.uk
copyright:           2016 Matt Tarabadi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable CI285Calc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  ViewPatterns
  build-depends:       base
                     , CI285Calc
                     , text
                     , yesod
                     , aeson
                     , classy-prelude
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tarabadi/CI285Calc
